results/SVCOMP/2-shot/log-assert6-2024_03_18_23_15_48.txt
import java.util.Random;

class assert6 {
  //@ ensures \old(i) >= 1000 ==> i >= 1000;
  public static void func() {
    int i = new Random().nextInt();

    if (i >= 1000) if (!(i >= 1000)) assert false;
  }
}
/home/max/Documents/JMLGPT/tmp/assert6.java:4: error: cannot find symbol
  //@ ensures \old(i) >= 1000 ==> i >= 1000;
                   ^
  symbol:   variable i
  location: class assert6
/home/max/Documents/JMLGPT/tmp/assert6.java:4: error: cannot find symbol
  //@ ensures \old(i) >= 1000 ==> i >= 1000;
                                  ^
  symbol:   variable i
  location: class assert6
2 errors

